# yad2-scraper

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  ci-cd-pipeline-implementation-plan.md  docker-compose.yml  known-issues.md  pyproject.toml  scraping-implementation-plan.md  testing-suite-implementation.md
.github/: dependabot.yml
.github/workflows/: ci.yml
src/yad2_scraper/: __init__.py  __main__.py  config.py  exporter.py  fetcher.py  models.py  parser.py
tests/: conftest.py
tests/fixtures/: sample_data.py
tests/integration/: conftest.py  test_cli.py  test_flow.py
tests/unit/: test_exporter.py  test_fetcher.py  test_models.py  test_parser.py
