[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yad2-scraper"
version = "0.1.0"
description = "Scrape used car listings from yad2.co.il and export to CSV"
requires-python = ">=3.11"
dependencies = [
    "httpx[http2]>=0.27",
    "beautifulsoup4>=4.12",
]

[project.scripts]
yad2-scraper = "yad2_scraper.__main__:main"

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "pytest-mock>=3.12",
    "respx>=0.21",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--cov=yad2_scraper",
    "--cov-report=term-missing",
    "--cov-report=html",
]
markers = [
    "unit: Unit tests for individual functions",
    "integration: Integration tests for workflows",
]
